Do not collapse anything when printing HTML reports (Issue-#23)

--- a/jgiven-core/src/main/resources/com/tngtech/jgiven/report/html/default.css
+++ b/jgiven-core/src/main/resources/com/tngtech/jgiven/report/html/default.css
@@ -244,7 +244,6 @@ h1 {
 }
 
 .scenario-body {
-  display: none;
   border-bottom: lightgray solid 1px;
 }
 
@@ -453,7 +452,7 @@ ul.steps {
 }
 
 .collapsed {
-	display:none;
+  display:none;
 }
 
 ul.steps li {
